--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
 	</dependencies>
 
 		<build>
+		<finalName>first-app</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
